fix(modal-error): fix spacing

--- a/assets/scss/components/_modal-error.scss
+++ b/assets/scss/components/_modal-error.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: spacing(8);
+  padding-left: spacing(8);
+  padding-right: spacing(8);
 
   .modal-error__title {
     margin-bottom: spacing(6);
